[package]
name = "deduper"
version = "0.1.0"
edition = "2021"

[dependencies]
base64ct = { version = "1.6.0", features = ["alloc"] }
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive"] }
ffmpeg-next = { version = "7.0.2", features = ["codec", "format"], default-features = false }
kamadak-exif = "0.5.5"
mime_guess = "2.0.5"
rayon = "1.10.0"
serde = { version = "1.0.204", features = ["derive"] }
sha2 = "0.10.8"
sqlx = { version = "0.7.4", default-features = false, features = ["sqlite", "chrono", "migrate", "macros", "runtime-tokio"] }
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread"] }
walkdir = "2.5.0"
